Add background img container

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
     </head>
     <body>
-        <h1>Rock Paper Scissors Showdown</h1>
+        <div class="background-img"></div>
 
         <script src="script.js"></script>
     </body>
