Add images and Dom manipulation for RPS human user

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
   
     </head>
     <body>
-        <div class="background-img"></div>
+        <div class="background-img">
+            <button class="rock-button btn-layout">Rock</button>
+            <button class="paper-button btn-layout">Paper</button>
+            <button class="scissors-button btn-layout">Scissors</button>
+            <img class="human-rock hide" src="images/rock_button.png">
+            <img class="human-paper hide" src="images/paper_button.png">
+            <img class="human-scissors hide" src="images/scissors_button.png">
+        </div>
 
         <script src="script.js"></script>
     </body>
