--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
             <button class="rock-button btn-layout">Rock</button>
             <button class="paper-button btn-layout">Paper</button>
             <button class="scissors-button btn-layout">Scissors</button>
+            <button class="quit-button btn-layout">QUIT</button>
             <img class="human-rock hide" src="images/rock_button.png">
             <img class="human-paper hide" src="images/paper_button.png">
             <img class="human-scissors hide" src="images/scissors_button.png">
+
+            <img class="comp-rock hide" src="images/rock_button.png">
+            <img class="comp-paper hide" src="images/paper_button.png">
+            <img class="comp-scissors hide" src="images/scissors_button.png">
         </div>
 
         <script src="script.js"></script>
