--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <button class="rock-button btn-layout">Rock</button>
             <button class="paper-button btn-layout">Paper</button>
             <button class="scissors-button btn-layout">Scissors</button>
-            <button class="quit-button btn-layout">QUIT</button>
+            <button class="reset-button btn-layout">Reset</button>
             <img class="human-rock hide" src="images/rock_button.png">
             <img class="human-paper hide" src="images/paper_button.png">
             <img class="human-scissors hide" src="images/scissors_button.png">
@@ -22,6 +22,9 @@
             <img class="comp-rock hide" src="images/rock_button.png">
             <img class="comp-paper hide" src="images/paper_button.png">
             <img class="comp-scissors hide" src="images/scissors_button.png">
+
+            <div class="human-score">123</div>
+            <div class="comp-score">034</div>
         </div>
 
         <script src="script.js"></script>
